nohup.out
  File "CGSbot.py", line 24
    async def on_message(message):
        ^
SyntaxError: invalid syntax
